Fix wrong color border on global nav logo
Fixing this bug by using nexted box-shadows, plus replacing the focus
indicaor work done under admin-833 with the box-shadows too.

fixes ADMIN-893

test plan:
  - create a theme with an odd color logo background
  - load canvas and tab to give the logo at the top of the navbar focus
  > expect there to be none of the navbar's background grey peeking out
  (high contrast mode doesn't matter, since the logo is hidden)
  - tab through the global nav
  > expect the focus indicator to match kdub's design attached to ADMIN-833

Reviewed-on: https://gerrit.instructure.com/144766
Tested-by: Jenkins
QA-Review: Dan Sasaki <dsasaki@instructure.com>
Product-Review: Ed Schiebel <eschiebel@instructure.com>

--- a/app/stylesheets/base/_ic_app_header.scss
+++ b/app/stylesheets/base/_ic_app_header.scss
@@ -80,7 +80,6 @@ $ic-tooltip-arrow-size: 0.375rem;
   &.ic-app-header__menu-list-item--active {
     .ic-app-header__menu-list-link {
       background: $ic-color-light;
-      outline: 1px solid $ic-color-light;
 
       body:not(.primary-nav-expanded) & {
         &:hover, &:focus {
@@ -93,7 +92,9 @@ $ic-tooltip-arrow-size: 0.375rem;
         }
       }
       &:focus {
-        border-color: var(--ic-brand-global-nav-menu-item__text-color--active);
+        box-shadow:
+          inset 0 0 0 1px var(--ic-brand-global-nav-bgd),
+          inset 0 0 0 2px var(--ic-brand-global-nav-menu-item__text-color--active);
       }
     }
     .ic-icon-svg {
@@ -120,8 +121,7 @@ $ic-tooltip-arrow-size: 0.375rem;
   text-align: center;
   display: block;
   color: var(--ic-brand-global-nav-menu-item__text-color);
-  margin: 2px 1px;
-  border: 2px solid transparent;
+  border-style: none;
 
   &:not(.ic-app-header__menu-list-link--nav-toggle) {
     padding: 0.25rem 0;
@@ -142,7 +142,6 @@ $ic-tooltip-arrow-size: 0.375rem;
 
   &:hover, &:focus {
     background-color: $ic-global-nav-link-hover;
-    outline-color: var(--ic-brand-global-nav-bgd);
     @if $use_high_contrast == false {
       text-decoration: none;
       outline: none;
@@ -158,7 +157,9 @@ $ic-tooltip-arrow-size: 0.375rem;
   }
 
   &:focus {
-    border-color: var(--ic-brand-global-nav-menu-item__text-color);
+    box-shadow:
+      inset 0 0 0 1px var(--ic-brand-global-nav-bgd),
+      inset 0 0 0 2px var(--ic-brand-global-nav-menu-item__text-color);
   }
 
   &:active {
@@ -201,8 +202,6 @@ $ic-tooltip-arrow-size: 0.375rem;
 button.ic-app-header__menu-list-link {
   background: transparent;
   outline: none;
-  margin: 1px auto;
-  border: 2px solid transparent;
 }
 
 .ic-avatar {
@@ -292,14 +291,11 @@ button.ic-app-header__menu-list-link {
   width: 100%;
   background-color: var(--ic-brand-global-nav-logo-bgd);
   box-sizing: border-box;
-  padding: 0;
 }
 
 .ic-app-header__logomark {
   display: block;
   overflow: hidden;
-  margin: 2px 1px;
-  border: 2px solid transparent;
   background-image: var(--ic-brand-header-image);
   background-position: 50%;
   background-repeat: no-repeat;
@@ -311,8 +307,10 @@ button.ic-app-header__menu-list-link {
     height: 85px;
   }
   &:focus {
-    border-color: var(--ic-brand-global-nav-menu-item__text-color);
     outline-style: none;
+    box-shadow:
+      inset 0 0 0 1px var(--ic-brand-global-nav-bgd),
+      inset 0 0 0 2px var(--ic-brand-global-nav-menu-item__text-color);
   }
 }
 // set to block to avoid any exta inline spacing at bottom
